cc-1-9/routes/annotations/f5-demo-app-route-balance.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-demo-app-route
    namespace: f5demo
    annotations:
      # Specify a supported BIG-IP load balancing mode
      # Change from the default balance to least-connections-node
      virtual-server.f5.com/balance: least-connections-node
  spec:
    host: mysite.f5demo.com
    path: "/"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-demo-app-route
