cc-1-9/routes/annotations/f5-demo-app-route-clientssl.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-demo-app-route
    namespace: f5demo
    annotations:
      # no annotations
      virtual-server.f5.com/clientssl: /Common/clientssl
  spec:
    host: mysite.f5demo.com
    path: "/"
    port:
      targetPort: 8080
    tls:
      termination: edge
    to:
      kind: Service
      name: f5-demo-app-route
